docs/api/qiskit/0.19/qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.mdx
---
title: GaussianConditionalIndependenceModel (v0.19)
description: API reference for qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel
---

# GaussianConditionalIndependenceModel

<Class id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/uncertainty_models/gaussian_conditional_independence_model.py" signature="GaussianConditionalIndependenceModel(n_normal, normal_max_value, p_zeros, rhos, i_normal=None, i_ps=None)" modifiers="class">
  The Gaussian Conditional Independence Model for Credit Risk.

  Reference: [https://arxiv.org/abs/1412.1183](https://arxiv.org/abs/1412.1183)

  Dependency between individual risk variables and latent variable is approximated linearly.

  **Parameters**

  *   **n\_normal** (`int`) – Number of qubits to represent the latent normal random variable Z
  *   **normal\_max\_value** (`float`) – Min/max value to truncate the latent normal random variable Z
  *   **p\_zeros** (`Union`\[`List`\[`float`], `ndarray`]) – Standard default probabilities for each asset
  *   **rhos** (`Union`\[`List`\[`float`], `ndarray`]) – Sensitivities of default probability of assets with respect to latent variable Z
  *   **i\_normal** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Indices of qubits to represent normal variable
  *   **i\_ps** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Indices of qubits to represent asset defaults

  ## Attributes

  <span id="gaussianconditionalindependencemodel-dimension" />

  ### dimension

  <Attribute id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.dimension">
    returns dimensions
  </Attribute>

  <span id="gaussianconditionalindependencemodel-high" />

  ### high

  <Attribute id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.high">
    returns high
  </Attribute>

  <span id="gaussianconditionalindependencemodel-low" />

  ### low

  <Attribute id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.low">
    returns low
  </Attribute>

  <span id="gaussianconditionalindependencemodel-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.num_qubits">
    returns num qubits
  </Attribute>

  <span id="gaussianconditionalindependencemodel-num-target-qubits" />

  ### num\_target\_qubits

  <Attribute id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.num_target_qubits">
    Returns the number of target qubits
  </Attribute>

  <span id="gaussianconditionalindependencemodel-num-values" />

  ### num\_values

  <Attribute id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.num_values">
    returns number of values
  </Attribute>

  <span id="gaussianconditionalindependencemodel-probabilities" />

  ### probabilities

  <Attribute id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.probabilities">
    returns probabilities
  </Attribute>

  <span id="gaussianconditionalindependencemodel-probabilities-vector" />

  ### probabilities\_vector

  <Attribute id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.probabilities_vector">
    returns probabilities vector
  </Attribute>

  <span id="gaussianconditionalindependencemodel-values" />

  ### values

  <Attribute id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.values">
    returns values
  </Attribute>

  ## Methods

  <span id="gaussianconditionalindependencemodel-build" />

  ### build

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.build" signature="GaussianConditionalIndependenceModel.build(qc, q, q_ancillas=None, params=None)" />

  <span id="gaussianconditionalindependencemodel-build-controlled" />

  ### build\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.build_controlled" signature="GaussianConditionalIndependenceModel.build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds corresponding controlled sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="gaussianconditionalindependencemodel-build-controlled-inverse" />

  ### build\_controlled\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.build_controlled_inverse" signature="GaussianConditionalIndependenceModel.build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds controlled inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="gaussianconditionalindependencemodel-build-controlled-inverse-power" />

  ### build\_controlled\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.build_controlled_inverse_power" signature="GaussianConditionalIndependenceModel.build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="gaussianconditionalindependencemodel-build-controlled-power" />

  ### build\_controlled\_power

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.build_controlled_power" signature="GaussianConditionalIndependenceModel.build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="gaussianconditionalindependencemodel-build-inverse" />

  ### build\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.build_inverse" signature="GaussianConditionalIndependenceModel.build_inverse(qc, q, q_ancillas=None)">
    Adds inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
  </Function>

  <span id="gaussianconditionalindependencemodel-build-inverse-power" />

  ### build\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.build_inverse_power" signature="GaussianConditionalIndependenceModel.build_inverse_power(qc, q, power, q_ancillas=None)">
    Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="gaussianconditionalindependencemodel-build-power" />

  ### build\_power

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.build_power" signature="GaussianConditionalIndependenceModel.build_power(qc, q, power, q_ancillas=None)">
    Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="gaussianconditionalindependencemodel-get-num-qubits" />

  ### get\_num\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.get_num_qubits" signature="GaussianConditionalIndependenceModel.get_num_qubits()">
    returns number of qubits
  </Function>

  <span id="gaussianconditionalindependencemodel-get-num-qubits-controlled" />

  ### get\_num\_qubits\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.get_num_qubits_controlled" signature="GaussianConditionalIndependenceModel.get_num_qubits_controlled()">
    returns number of qubits controlled
  </Function>

  <span id="gaussianconditionalindependencemodel-pdf-to-probabilities" />

  ### pdf\_to\_probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.pdf_to_probabilities" signature="GaussianConditionalIndependenceModel.pdf_to_probabilities(pdf, low, high, num_values)" modifiers="static">
    pdf to probabilities
  </Function>

  <span id="gaussianconditionalindependencemodel-required-ancillas" />

  ### required\_ancillas

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.required_ancillas" signature="GaussianConditionalIndependenceModel.required_ancillas()">
    returns required ancillas
  </Function>

  <span id="gaussianconditionalindependencemodel-required-ancillas-controlled" />

  ### required\_ancillas\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.GaussianConditionalIndependenceModel.required_ancillas_controlled" signature="GaussianConditionalIndependenceModel.required_ancillas_controlled()">
    returns required ancillas controlled
  </Function>
</Class>

